// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManualPricingColumnCellRenderer /> should render correctly 1`] = `
<Flex
  align="center"
>
  <Styled(styled.p)
    color="#38A9DB"
    cursor="pointer"
    ellipsis={true}
    onClick={[Function]}
    opacity={1}
    size={14}
    title="SET PRICE"
  >
    SET PRICE
  </Styled(styled.p)>
</Flex>
`;

exports[`<ManualPricingColumnCellRenderer /> should render correctly when isEditing is true 1`] = `
<Flex
  align="center"
>
  <NumberInputField
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [
          [Function],
        ],
        "componentStyle": ComponentStyle {
          "componentId": "sc-eilVRo",
          "isStatic": false,
          "rules": Array [
            "
  box-sizing: border-box;
  display: block;
  margin-top: 10px;
  margin-bottom: 5px;
  background: ",
            [Function],
            ";
  background-image: ",
            [Function],
            ";
  background-repeat: no-repeat;
  background-position: right center;

  &:-webkit-autofill {
    animation-name: ",
            [Function],
            ";
    animation-fill-mode: both;
  }

  font-size: 1rem;
  width: ",
            [Function],
            ";
  padding-left: 3%;
  border: 2px solid;
  border-radius: 3px;
  border-color: ",
            [Function],
            ";
  padding-top: 0.9em;
  padding-bottom: 0.9em;

  ::placeholder {
    color: ",
            "#999999",
            ";
  }
",
            "
  box-sizing: border-box;
  margin: 0 0.5rem 0 0;
  padding: 10px 8px;
  max-height: 35px;
  max-width: 80px;
",
          ],
        },
        "displayName": "Styled(styled.input)",
        "foldedComponentIds": Array [
          "sc-hEsumM",
        ],
        "render": [Function],
        "styledComponentId": "sc-eilVRo",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    onChange={[Function]}
    placeholder="$12.00"
    value=""
  />
  <Styled(Styled(Styled(styled.button)))
    onClick={[Function]}
  >
    Set Price
  </Styled(Styled(Styled(styled.button)))>
  <Flex>
    <ClearIcon
      fill="#000"
      height="24px"
      onClick={[Function]}
      styles={
        Object {
          "cursor": "pointer",
          "marginLeft": 7,
        }
      }
      width="24px"
    />
  </Flex>
</Flex>
`;

exports[`<ManualPricingColumnCellRenderer /> should render correctly when manualPriceLocked is true 1`] = `
<Flex
  align="center"
>
  <Styled(styled.p)
    color="#38A9DB"
    cursor="pointer"
    ellipsis={true}
    onClick={[Function]}
    opacity={0.5}
    size={14}
    title="SET PRICE"
  >
    SET PRICE
  </Styled(styled.p)>
</Flex>
`;

exports[`<ManualPricingColumnCellRenderer /> should render correctly when the cellData has a value 1`] = `
<Flex
  align="center"
>
  <Styled(styled.p)
    color="#38A9DB"
    cursor="pointer"
    marginLeft="1rem"
    onClick={[Function]}
    size={14}
  >
    $12.00
  </Styled(styled.p)>
</Flex>
`;
